# linkedin-mcp

./: .env.example  .gitignore  PIPELINE_SETUP_PROMPT.md  README.md  SETUP.md  SETUP_PROMPT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  privacy-policy.md
pipeline/: README.md  server.py  test_server.py
pipeline/pages/: index.html  schedule.html
src/linkedin_mcp/: __init__.py  __main__.py  api.py  audit.py  auth.py  history.py  models.py  server.py
tests/: test_api.py  test_audit.py  test_auth.py  test_history.py  test_models.py  test_server.py
