[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-mcp"
version = "0.2.0"
description = "A ToS-compliant MCP server for LinkedIn using the official API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marc Saunders" },
]
keywords = ["linkedin", "mcp", "model-context-protocol", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=0.7.0",
    "httpx>=0.27.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/anubisalpha/linkedin-mcp"
Issues = "https://github.com/anubisalpha/linkedin-mcp/issues"
